src/Test/Fixtures/Good/BitQubit/inferredQubitArrayExprDeclaration.lf
let qubits = qalloc(n + 1);