src/Test/Fixtures/Bad/TypeQualifier/doubleAffineQubit.lf
let affine affine q: qubit = qalloc();
